<resources>
    <string name="app_name">MyCalculator2.0</string>
    <string name="del">Del</string>
    <string name="percent">\u0025</string>
    <string name="minus">\u002D</string>
    <string name="equals">\u003D</string>
    <string name="point">\u002E</string>
    <string name="plus">\u002B</string>
    <string name="multi">\u00D7</string>
    <string name="div">\u00F7</string>
    <string name="pi">\u03C0</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_10">10</string>
    <string name="open">\u0028</string>
    <string name="close">\u0029</string>
    <string name="invalid_expression">Invalid Expression</string>
    <string name="c">\u0043</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="cancel">Cancel</string>
    <string name="set">Set</string>
    <string name="_default">Default</string>
    <string name="orange">Orange</string>
    <string name="turquoise">Turquoise</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="pink">Pink</string>
    <string name="themes">Themes</string>
    <string name="answerPrecision">Answer Precision</string>
    <string name="x3">X\u00B3</string>
    <string name="xy">X\u02B8</string>
    <string name="x2">X\u00B2</string>
    <string name="_10x">10\u02E3</string>
    <string name="ex">e\u02E3</string>
    <string name="square_root">\u221A</string>
    <string name="u221b">∛</string>
    <string name="cos">cos</string>
    <string name="sin">sin</string>
    <string name="tan">tan</string>
    <string name="cosh">cosh</string>
    <string name="sinh">sinh</string>
    <string name="tanh">tanh</string>
    <string name="_1_x">1/x</string>
    <string name="ln">ln</string>
    <string name="log">log</string>
    <string name="e">e</string>
    <string name="factorial">X\u0021</string>
</resources>
