<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="?mainLayoutBackground">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="6"
        style="?mainLayoutBackground">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="4">

            <Button
                android:id="@+id/c"
                style="?buttonSecondary"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:text="@string/c"
                android:textSize="34sp" />

            <Button
                android:id="@+id/multi"
                style="?buttonSecondary"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:text="@string/multi" />

            <Button
                android:id="@+id/div"
                style="?buttonSecondary"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:text="@string/div" />

            <ImageButton
                android:id="@+id/del"
                style="?imageButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/del"
                android:scaleX="1.3"
                android:scaleY="1.3"
                app:srcCompat="@android:drawable/ic_input_delete" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="4">

            <Button
                android:id="@+id/open"
                style="?buttonPrimary"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/open" />

            <Button
                android:id="@+id/close"
                style="?buttonPrimary"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/close" />

            <Button
                android:id="@+id/pi"
                style="?buttonPrimary"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/pi" />

            <Button
                android:id="@+id/plus"
                style="?buttonSecondary"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:text="@string/plus" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="4">

            <Button
                android:id="@+id/seven"
                style="?buttonPrimary"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_7" />

            <Button
                android:id="@+id/eight"
                style="?buttonPrimary"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_8" />

            <Button
                android:id="@+id/nine"
                style="?buttonPrimary"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_9" />

            <Button
                android:id="@+id/minus"
                style="?buttonSecondary"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:text="@string/minus" />
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="4">

            <Button
                android:id="@+id/four"
                style="?buttonPrimary"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_4" />

            <Button
                android:id="@+id/five"
                style="?buttonPrimary"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_5" />

            <Button
                android:id="@+id/six"
                style="?buttonPrimary"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_6" />

            <Button
                android:id="@+id/percent"
                style="?buttonSecondary"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:text="@string/percent"
                android:textSize="32sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:weightSum="4">

            <TableLayout
                style="?buttonPrimary"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:weightSum="2">

                <TableRow
                    style="?buttonPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:weightSum="3">

                    <Button
                        android:id="@+id/one"
                        style="?buttonPrimary"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/_1" />

                    <Button
                        android:id="@+id/two"
                        style="?buttonPrimary"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/_2" />

                    <Button
                        android:id="@+id/three"
                        style="?buttonPrimary"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/_3" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:weightSum="3">

                    <Button
                        android:id="@+id/point"
                        style="?buttonPrimary"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/point" />

                    <Button
                        android:id="@+id/zero"
                        style="?buttonPrimary"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="@string/_0" />

                </TableRow>

            </TableLayout>

            <Button
                android:id="@+id/equal"
                style="?buttonSecondary"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/equals" />

        </TableRow>

    </TableLayout>

</android.support.constraint.ConstraintLayout>